--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -1,6 +1,6 @@
 .profilePage{
   display:flex;
-  justify-content:center;
-  width:100%;
+  flex-direction:column;
+  align-items:center;
   height:100vh;
 }
