Mise en place mock + api

--- a/src/components/Aside/Aside.module.css
+++ b/src/components/Aside/Aside.module.css
@@ -2,10 +2,10 @@
    display:flex;
    flex-direction:column;
    justify-content:center;
-   align-items:center;
-   width:100px;
+   align-items:flex-start;
+   width:70px;
    height:100%;
    background:black;
-   order:1;
+   order:0;
 }
 
