Mise en page de la page 404

--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -1,29 +1,28 @@
-.dashboardContainer{
-  display:flex;
-  flex-direction:column;
-  width:100%;
-  padding:20px;
+.dashboardContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px;
 }
 
-
-.GraphsSection{
-  display:flex;
-  flex-direction:column;
-  width:100%;
+.GraphsSection {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-
-.welcomecontainer{
-  height:10%;
-  display:flex;
+.welcomecontainer {
+  height: 10%;
+  display: flex;
 }
 
-.welcomeMsg{
-  display:flex;
-  align-items:center;
-  font-size:2rem;
+.welcomeMsg {
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
 }
 
-.lastName{
-  color:red;text-transform: capitalize;
+.lastName {
+  color: red;
+  text-transform: capitalize;
 }
