--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   max-height:100%;
   width: 100%;
-  padding: 20px;
+  padding: 20px 0px 0px 20px;
 }
 
 
@@ -13,31 +13,31 @@
   display:flex;
   height:90%;
   width:100%;
-  padding:20px 20px 20px 0;
+  padding:20px 20px 20px 0;  justify-content:space-between;
+
 }
 
 .graphsSection{
   display:flex;
   flex-direction:column;
-  max-height:100%;
-  width:80%;
-  justify-content:center;
+  justify-content:space-between;
+  width:70%;
   align-items:center;
 }
 
-.keyDatasContainer{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:red;
-  max-height:100%;
-  width:20%;
-}
+
 
 .graphSectionDown{
   display:flex;
   justify-content:space-between;
-  height:50%;
   width:100%
 }
 
+.keyDatasContainer{
+  display:flex;
+  flex-direction:column;
+  width:30%;
+  max-height:100%;
+  justify-content:space-between;
+  
+}
