--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@
 }
 
 html {
+  width:100vw;
   height:100vh;
-  width:100%;
+  max-height:100vh;
 }
 
 
@@ -15,10 +16,14 @@ body {
   justify-content:center;
   align-items:center;
   font-family: 'Roboto', 'Ubuntu', sans-serif;
-  width:100%;
+  width:100vw;
+  height:100vh;
+  max-height:100vh;
 }
 
 #root{
-  width:100%;
+  width:100vw;
+  height:100vh;
+  max-height:100vh;
 }
 
