--- a/src/components/Dashboard/LineChart/LineChart.module.css
+++ b/src/components/Dashboard/LineChart/LineChart.module.css
@@ -1,6 +1,7 @@
 .linechartComponent{
   display:flex;
   background-color:red;
+  border-radius:15px;
 
   width:20vw !important;
   height:20vw !important;
