--- a/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
+++ b/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
@@ -1,31 +1,43 @@
 .keyData{
   display:flex;
-  justify-content:space-between;
+  justify-content:flex-start;
   align-items:center;
   width:200px;
   height:20%;
   padding:10px;
   border:none;;
-  border-radius:5px;
+  border-radius:15px;
   background-color:#FBFBFB;
   font-size:14px;
+  color:grey;
 }
 .keyDataName{
   display:flex;
+  font-weight:700;
+  margin-bottom:5px;
 }
 .keyDataValue{
   display:flex;
+  font-size:75%;
+  font-weight:500;
+}
+
+.textContainer{
+  display:flex;
+  flex-direction:column;
+  justify-content:space-around;
+  align-items:start;
 }
 
 .keyDataIcon{
   display:flex;
-  margin-right:20px;
+  margin:20px;
 }
 
 .keyDatasDiv{
   display:flex;
   flex-direction:column;
-  justify-content:space-around;
+  justify-content:space-between;
   align-items:center;
   width:100%;
   height:100%;
