--- a/src/components/Dashboard/RadialChart/Radialchart.module.css
+++ b/src/components/Dashboard/RadialChart/Radialchart.module.css
@@ -4,7 +4,9 @@
   height:20vw !important;
   justify-content: center;
   align-items: center;
-
+  z-index:1;
+  border-radius:15px;
+background-color:#FBFBFB;
 }
 
 .radialChart{
@@ -18,4 +20,22 @@
   display:flex;
   width:100%;
   height:100%;
+  background-color:'red';
+
+}
+
+.radialBarTextContainer{
+  display:flex;
+  width:100%;
+  height:100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  colr:black;
+  z-index:100;
+}
+
+.scoring{
+  display:flex;
+  z-index:100;
 }
