--- a/src/components/header/logo/logo.module.css
+++ b/src/components/header/logo/logo.module.css
@@ -1,10 +1,14 @@
 .logoContainer{
-  width:200px;
+  display:flex;
+  width:10%;
+  height:100%;
+  max-height:100%;
+  margin: 10px 
+  
+  
 }
 
 .logo{
-  width:100%;
-  height:90%;
-  max-height:100px;
-  padding:20px;
+  
+  max-width:90%;
 }
