--- a/src/components/Dashboard/Barcharts/Barchart.module.css
+++ b/src/components/Dashboard/Barcharts/Barchart.module.css
@@ -1,6 +1,6 @@
 .barchartsContainer{
   display:flex;
-  height:50%;
+  height:47.5%;
   background-color: #fbfbfb;
   border-radius: 15px;
 }
@@ -29,4 +29,24 @@
   padding:15px;
   font-size: .65em;
   
+}
+
+.legend{
+  display:flex;
+  justify-content:flex-end;
+  align-items:center;
+  font-size: 0.85rem;
+  margin-right:50px;
+}
+
+.legend div, .legend p{
+  display:flex;
+  text-align:center;
+  justify-content:center;
+  align-items:center;
+  height:20px;
+  border-radius:50%;
+  font-weight:600;
+  margin:0 5px 20px 0;
+  color:grey;
 }
