--- a/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
+++ b/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
@@ -2,7 +2,7 @@
   display:flex;
   justify-content:flex-start;
   align-items:center;
-  width:200px;
+  width:80%;
   height:20%;
   padding:10px;
   border:none;;
@@ -41,4 +41,5 @@
   align-items:center;
   width:100%;
   height:100%;
+  padding:0 20px 20px 0px; 
 }
