--- a/src/components/Dashboard/RadialChart/Radialchart.module.css
+++ b/src/components/Dashboard/RadialChart/Radialchart.module.css
@@ -7,11 +7,12 @@
   z-index:1;
   border-radius:15px;
 background-color:#FBFBFB;
+max-width:300px;
+max-height:300px;
 }
 
 .radialChart{
-  width:20vw !important;
-  height:20vw !important;
+  
   justify-content: center;
   align-items: center;
 }
