--- a/src/components/Dashboard/RadarChart/Radarchart.module.css
+++ b/src/components/Dashboard/RadarChart/Radarchart.module.css
@@ -7,16 +7,20 @@ width:20vw !important;
 height:20vw !important;
 max-width:300px;
 max-height:300px;
-
+justify-content:center;
+  align-items:center;
+  overflow:visible;
+  
 }
 
 .radarChart{
-  width:100%;
-  height:100%;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
+    display:flex;
+    width:100%;
+    height:100%;
+    max-width:100%;
+    max-height:100%;
+    font-size: 70%;
+    
+    justify-content:center;
   align-items:center;
-  padding: 20px
-  
 }
