--- a/src/components/Dashboard/RadarChart/Radarchart.module.css
+++ b/src/components/Dashboard/RadarChart/Radarchart.module.css
@@ -9,18 +9,25 @@ max-width:300px;
 max-height:300px;
 justify-content:center;
   align-items:center;
-  overflow:visible;
+  padding:0px;
+  margin:0px;
   
 }
 
 .radarChart{
     display:flex;
-    width:100%;
-    height:100%;
-    max-width:100%;
-    max-height:100%;
-    font-size: 70%;
     
+    font-size: 0.5em;
     justify-content:center;
   align-items:center;
+  margin:5%;
+  max-width:98%;
+  max-height:98%;
+}
+
+
+.axis{
+  display:flex;
+  
+  
 }
