--- a/src/pages/ErrorPage/MainErrorPage/MainErrorPage.module.css
+++ b/src/pages/ErrorPage/MainErrorPage/MainErrorPage.module.css
@@ -23,3 +23,16 @@
 .oups{
   color:white;
 }
+
+.errorLink{
+  display:flex;
+  text-decoration:none;
+  color : red;
+  font-family: 'Roboto', sans-serif;
+  font-weight:550;
+  margin:60px 20px 20px 20px;
+ text-align:center;
+  padding:20px 30px ;
+  border-radius:5px;
+  background:lightgrey;
+}
