--- a/src/components/Dashboard/Barcharts/Barchart.module.css
+++ b/src/components/Dashboard/Barcharts/Barchart.module.css
@@ -5,11 +5,7 @@
   border-radius: 15px;
 }
 
-.barchart{
-  display:flex;
-  width:50%;
-  height:80%;
-}
+
 
 .tooltip{
   display:flex;
@@ -26,27 +22,33 @@
   align-items:center;
   height:20%;
   width:100%;
-  padding:15px;
+  padding:10px 7px;
   font-size: .65em;
   
 }
 
 .legend{
   display:flex;
+  
   justify-content:flex-end;
   align-items:center;
-  font-size: 0.85rem;
-  margin-right:50px;
+  font-size: 1.6vh;
+  margin:0 60px 40px 10px;
+
 }
 
-.legend div, .legend p{
+.legendItem{
   display:flex;
-  text-align:center;
-  justify-content:center;
+  justify-content:space-between;
   align-items:center;
-  height:20px;
-  border-radius:50%;
-  font-weight:600;
-  margin:0 5px 20px 0;
-  color:grey;
+  font-weight: 600;
+  color: darkgrey;
+  margin-left:30px;
+
+
+}
+
+.legendIcon{
+  display:flex;
+  margin-right:5px;
 }
