--- a/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
+++ b/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
@@ -26,7 +26,7 @@
   display:flex;
   flex-direction:column;
   justify-content:space-around;
-  align-items:start;
+  align-items:flex-start;
 }
 
 .keyDataIcon{
