--- a/src/components/Dashboard/LineChart/LineChart.module.css
+++ b/src/components/Dashboard/LineChart/LineChart.module.css
@@ -1,39 +1,38 @@
-.linechartComponent{
-  display:flex;
-  background-color:red;
-  border-radius:15px;
-overflow:hidden;
-  width:20vw !important;
-  height:20vw !important;
-  max-width:300px;
-max-height:300px;
+.linechartComponent {
+  display: flex;
+  background-color: red;
+  border-radius: 15px;
+  overflow: hidden;
+  width: 20vw !important;
+  height: 20vw !important;
+  max-width: 300px;
+  max-height: 300px;
 }
 
-.tooltip{
-  display:flex;
-  background-color:#FFFFFF;
+.tooltip {
+  display: flex;
+  background-color: #ffffff;
 }
 
-.label{
-  display:flex;
-  background-color:#FFFFFF;
-  color:black;
-  font-size:80%;
-  padding:0.75rem 1rem;
+.label {
+  display: flex;
+  background-color: #ffffff;
+  color: black;
+  font-size: 80%;
+  padding: 0.75rem 1rem;
 }
 
-.rectangle{
-  display:flex;
-  background-color:#FFFFFF;
-  color:black;
-  font-size:80%;
-  padding:0.75rem 1rem;
-  border:none;
-  border-radius:15px;
-  
-}
-
-.line{
-  
-  
+.legendItem {
+  display: flex;
+  color: black;
+  opacity: 0.3;
+  font-size: 1.6vh;
+  font-weight: 600;
+  position: relative;
+  top: 30px;
+  left: 20px;
+  width: 45%;
+  border: none;
+  border-radius: 15px;
+  margin: 0.5rem;
 }
