--- a/src/components/Dashboard/RadarChart/Radarchart.module.css
+++ b/src/components/Dashboard/RadarChart/Radarchart.module.css
@@ -9,7 +9,7 @@ max-width:300px;
 max-height:300px;
 justify-content:center;
   align-items:center;
-  padding:0px;
+  padding:10px;
   margin:0px;
   
 }
@@ -17,7 +17,7 @@ justify-content:center;
 .radarChart{
     display:flex;
     
-    font-size: 0.5em;
+    font-size: 1.2vh;
     justify-content:center;
   align-items:center;
   margin:5%;
