--- a/FrontEnd/src/components/Dashboard/Dashboard.module.css
+++ b/FrontEnd/src/components/Dashboard/Dashboard.module.css
@@ -32,10 +32,9 @@
 .graphSectionDown{
   display:flex;
   justify-content:space-between;
+  align-items:flex-end;
   width:100%;
-  height:-webkit-fit-content;
-  height:-moz-fit-content;
-  height:fit-content;
+  height:50%;
   padding:0px 0px 20px 0px;
 }
 
