--- a/FrontEnd/src/components/Aside/Aside.module.css
+++ b/FrontEnd/src/components/Aside/Aside.module.css
@@ -3,11 +3,20 @@
    position:relative;
    flex-direction:column;
    justify-content:center;
-   align-items:flex-start;
-   width:70px;
+   align-items:center;
+   width:100px;
    height:100%;
-   max-height:100%;
    background:black;
    order:0;
 }
 
+.copyRights{
+   position:absolute;
+   width:200px;
+   bottom:10vh;
+   color:white;
+transform:rotate(-90deg);   
+ font-size:1.2vh;
+   font-weight:500;
+   text-align:center;
+}
