--- a/FrontEnd/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
+++ b/FrontEnd/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
@@ -22,7 +22,7 @@
   font-weight:500;
 }
 
-.textContainer{
+.keyDataTextContainer{
   display:flex;
   flex-direction:column;
   justify-content:space-around;
