--- a/FrontEnd/src/components/Dashboard/RadarChart/Radarchart.module.css
+++ b/FrontEnd/src/components/Dashboard/RadarChart/Radarchart.module.css
@@ -2,8 +2,8 @@
   display: flex;
   background-color: #000;
   border-radius: 15px;
-  width: 20vw !important;
-  height: 20vw !important;
+  width: 25vh !important;
+  height: 25vh !important;
   max-width: 350px;
   max-height: 350px;
   justify-content: center;
@@ -21,5 +21,9 @@
   max-height: 95%;
 }
 
-
+.axis{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
