--- a/FrontEnd/src/pages/HomePage/MainHomePage/mainHomePage.module.css
+++ b/FrontEnd/src/pages/HomePage/MainHomePage/mainHomePage.module.css
@@ -32,9 +32,19 @@
   padding:10px 20px;
   margin:20px;
   color:rgb(255, 1, 1);
-  text-transform:capitalize
+  text-transform:capitalize;
+  box-shadow: 10px 10px 10px rgba(255, 1, 1, 0.3);
 }
 
+.choiceLink:hover{
+  margin-top:30px;
+  box-shadow: 5px 5px 5px rgba(255, 1, 1, 0.5);
+}
+
+.choiceLink:active{
+  margin-top:40px;
+  box-shadow: 1px 1px 1px rgba(255, 1, 1, 0.7);
+}
 
 
 .choiceLink:visited{
