--- a/FrontEnd/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
+++ b/FrontEnd/src/components/Dashboard/KeyDatasContainer/KeyDatasComponent.module.css
@@ -1,45 +1,45 @@
-.keyData{
-  display:flex;
-  justify-content:flex-start;
-  align-items:center;
-  width:70%;
-  height:20%;
-  padding:10px;
-  border:none;;
-  border-radius:15px;
-  background-color:#FBFBFB;
-  font-size:1.4vh;
-  color:grey;
+.keyData {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 70%;
+  height: 20%;
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  background-color: #fbfbfb;
+  font-size: 1.4vh;
+  color: grey;
 }
-.keyDataName{
-  display:flex;
-  font-weight:700;
-  margin-bottom:5px;
+.keyDataName {
+  display: flex;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
-.keyDataValue{
-  display:flex;
-  font-size:1.2vh;
-  font-weight:500;
-}
-
-.keyDataTextContainer{
-  display:flex;
-  flex-direction:column;
-  justify-content:space-around;
-  align-items:flex-start;
+.keyDataValue {
+  display: flex;
+  font-size: 1.2vh;
+  font-weight: 500;
 }
 
-.keyDataIcon{
-  display:flex;
-  margin:20px;
+.keyDataTextContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
-.keyDatasDiv{
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
-  align-items:center;
-  width:100%;
-  height:100%;
-  padding:0 20px 20px 0px; 
+.keyDataIcon {
+  display: flex;
+  margin: 20px;
+}
+
+.keyDatasDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 20px 20px 0px;
 }
