--- a/FrontEnd/src/components/Dashboard/PieChart/PieChart.module.css
+++ b/FrontEnd/src/components/Dashboard/PieChart/PieChart.module.css
@@ -1,6 +1,5 @@
 .pieChartComponent {
-  
-  background-color: #FBFBFB;
+  background-color: #fbfbfb;
   border-radius: 15px;
   overflow: hidden;
   width: 25vh !important;
@@ -10,23 +9,20 @@
 }
 
 .legend {
-  position:absolute;
+  position: absolute;
   font-weight: bold;
-  font-size:1.2vh;
-  margin-top:10%;
-  margin-left:10%
+  font-size: 1.2vh;
+  margin-top: 10%;
+  margin-left: 10%;
 }
 
-.labelScore{
+.labelScore {
   font-size: 3.5vh;
   font-weight: bold;
-  
 }
 
-.labelText{
+.labelText {
   font-size: 1.5vh;
   font-weight: 600;
   fill: darkgrey;
-  
 }
-
