--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,29 +1,27 @@
 * {
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-  width:100vw;
-  height:100vh;
-  max-height:100vh;
+  width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
 }
-
 
 body {
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-family: 'Roboto', 'Ubuntu', sans-serif;
-  width:100vw;
-  height:100vh;
-  max-height:100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", "Ubuntu", sans-serif;
+  width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
 }
 
-#root{
-  width:100vw;
-  height:100vh;
-  max-height:100vh;
+#root {
+  width: 100vw;
+  height: 100vh;
+  max-height: 100vh;
 }
-
