--- a/FrontEnd/src/components/Dashboard/PieChart/PieChart.module.css
+++ b/FrontEnd/src/components/Dashboard/PieChart/PieChart.module.css
@@ -21,6 +21,14 @@
   font-weight: bold;
 }
 
+.scoringText{
+  outline: none;
+}
+
+.bar{
+  outline:none;
+}
+
 .labelText {
   font-size: 1.5vh;
   font-weight: 600;
