Mise a jour styles des cartes
mise a jour et adaptation linechart + radarChart + PieChart + margin dashboard

--- a/FrontEnd/src/components/Dashboard/LineChart/LineChart.module.css
+++ b/FrontEnd/src/components/Dashboard/LineChart/LineChart.module.css
@@ -3,10 +3,10 @@
   background-color: red;
   border-radius: 15px;
   overflow: hidden;
-  width: 25vh !important;
-  height: 25vh !important;
-  max-width: 350px;
-  max-height: 350px;
+  width: 20vw !important;
+  height: 20vw !important;
+  max-width: 330px;
+  max-height: 330px;
 }
 
 .tooltip {
@@ -25,7 +25,7 @@
 .legendItem {
   display: flex;
   color: white;
-  opacity: 0.3;
+  opacity: 0.5;
   font-size: 1.2vh;
   font-weight: 550;
   position: relative;
