--- a/FrontEnd/src/components/Dashboard/Dashboard.module.css
+++ b/FrontEnd/src/components/Dashboard/Dashboard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   max-height: 100%;
   width: 100%;
-  padding: 20px 0px 60px 30px;
+  padding: 75px 100px;;
 }
 
 .viewStats {
